--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sidd Glowing - Reveal The Beauty of Skin whose does not use snapchat filters </title>
+  <title>Miya Bhai Prescription- Reveal-The-Beauty-of-Skin-whose-does-not-use-snapchat-filters </title>
 
   <!-- 
     - favicon
@@ -1395,7 +1395,7 @@
 
         <div class="wrapper">
           <p class="copyright">
-            &copy; 2024 Sahil5038
+            &copy;  Mohammad Sahil Bin Shaheed Siddiqui
           </p>
 
           <ul class="social-list">
